# archived-cocoa_grinwallet

./: .gitignore  .gitmodules  README.md  cocoa_grinwallet.podspec
Example/: Podfile
Example/Tests/: Tests.swift
Example/cocoa_grinwallet/: AppDelegate.swift  ViewController.swift
Example/cocoa_grinwallet.xcodeproj/: project.pbxproj
Example/cocoa_grinwallet.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Example/cocoa_grinwallet.xcodeproj/xcshareddata/xcschemes/: cocoa_grinwallet-Example.xcscheme
Example/cocoa_grinwallet.xcworkspace/: contents.xcworkspacedata
Example/cocoa_grinwallet/Base.lproj/: LaunchScreen.xib  Main.storyboard
cocoa_grinwallet/Classes/: GrinBridge.swift  GrinTypes.swift  grinwallet.h
rust/: Cargo.toml  copy_libs.sh
rust/src/: lib.rs
